@@ -9,6 +9,8 @@ Version 5.3
   types and is approx. 40% faster.
 - fixed membership provider so that calling GetPassword with an incorrect password will
   throw the appropriate exception (bug #38939)
+- fixed web providers autogenerateschema option where it would fail if no schema is
+  present at all (bug #39072)
 
 
 Version 5.2.3 - 8/14/08
